syntax = "proto3";

package inventory;

option go_package = "inventory-service/proto;inventory";

service InventoryService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProductByID(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (Empty);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message CreateProductRequest {
  string name = 1;
  string category = 2;
  int32 stock = 3;
  double price = 4; // ← ИЗМЕНЕНО: было float
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string category = 3;
  int32 stock = 4;
  double price = 5; // ← ИЗМЕНЕНО: было float
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string category = 3;
  int32 stock = 4;
  double price = 5; // ← ИЗМЕНЕНО: было float
}

message DeleteProductRequest {
  string id = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated ProductResponse products = 1;
}

message Empty {}
