syntax = "proto3";

package order;

option go_package = "order-service/proto;orderpb";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderByID (GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (OrderResponse);
  rpc ListUserOrders (ListOrdersRequest) returns (ListOrdersResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  string status = 2;
  repeated OrderItem products = 3;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3; // <-- Добавлено поле цены
}

message GetOrderRequest {
  string id = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message ListOrdersRequest {
  string user_id = 1;
}

message OrderResponse {
  string id = 1;
  string user_id = 2;
  repeated OrderItem products = 3;
  string status = 4;
  string created_at = 5;
}

message ListOrdersResponse {
  repeated OrderResponse orders = 1;
}
